--- a/robot.html
+++ b/robot.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Robot</title>
+  <meta charset="UTF-8">
+  <title>Robot</title>
 </head>
 <body>
     
-    <div id="page">
-        
-    </div>
-    <!-- /#page -->
+  <div id="page">
+    Loading...
+  </div>
+  <!-- /#page -->
 
-    <script src="js/maze.js"></script>
-    <script src="js/robot.js"></script>
-    <script src="js/mazespace.js"></script>
+  <script src="js/maze.js"></script>
+  <script src="js/robot.js"></script>
+  <script src="js/mazespace.js"></script>
 </body>
 </html>
