--- a/robot.html
+++ b/robot.html
@@ -14,5 +14,11 @@
   <script src="js/maze.js"></script>
   <script src="js/robot.js"></script>
   <script src="js/mazespace.js"></script>
+  <script>
+   var m = new Maze(5, 7);
+   m.setStart(1, 1, 'north');
+   m.setEnd(5,1);
+   m.setWall(1, 1, 'east');
+  </script>
 </body>
 </html>
